2006-08-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs.cc: Fixed cache-out bug of terrain objects when the whole map is cached
	  out (mostly when teleporting to another map).
	* exult.cc, exultmenu.cc: Fixed a palette problem when loading a game with
	  command-line parameters with 'skip_splash' disabled. Also, fixed the initial
	  Exult logo in the menu.

2006-08-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc, exultmenu.cc: Added a Zaurus version of the menu -- single
	  column, only 3 games/mods per page and no Exult logo in the back (as it
	  interferes with menu) -- due to resolution constraints. Also fixed dumb
	  mistake when loading a game with --bg or --si.

2006-08-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Adding mod manager to Exult and Exult Studio. New Exult menu now displays
	  all games in exult.cfg and has a sub-menu for each game's mods. Likewise,
	  Exult Studio can load games and mods. In some of the files, converted some
	  identation spaces into tabs, and some trailing spaces were removed.
	Detailed information:
	* modmgr.*: New classes that (1) manage the game list, (2) manage each
	  game's mods and (3) store information for each game/mod and correctly
	  sets path information when needed. Games have their own entries in
	  exult.cfg (with the additional "title" tag containing the string to
	  display in the Exult menu), while mods have their own drop-in cfg files
	  located in "<MODS>/*.cfg". The "<MODS>" directory is configurable for
	  each game in exult.cfg (with the new "<mods>" tag), but defaults to
	  "<path>/mods".
	* menulist.*: New text-based menu entry classes replacing the shape-based
	  ones (except for the MenuEntry, also referenced in game.cc, due to palette
	  concerns) and added menu IDs to entries.
	* exult.*: Command-line loading of mods with "--mod <mod>", modified loading
	  of games to use classes from modmgr; moved some functions to modmgr.*;